# musica-arg-nlp

./: .gitignore  README.md  _quarto.yml  config.ini.secret  index.qmd  pyproject.toml  setup.py
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
_notebooks/: 0.0-get-lyrics.ipynb  0.1-get-lyrics.ipynb  1.0-get-spotify-data.ipynb
data/processed/: 100canciones_rock_argentino.csv  Charly_García_songs.csv
data/raw/: 100canciones_rock_argentino.csv
