[project]
name = "musica_arg_nlp"
version = "0.1.0"
description = "A template for data analysis projects using python"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Fernanda Aguirre Ruiz"}
]

dependencies = [
    "ipykernel",
    "nbformat",
    "pandas",
    "numpy",
    "requests",
    "plotly",
    "openpyxl",
    "lyricsgenius>=3.6.0",
    "tqdm>=4.67.1",
    "spotipy>=2.25.1",
]

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false
